<?xml version="1.0" encoding="UTF-8"?>
<project>
	<modelVersion>4.0.0</modelVersion>

	<groupId>Job4j</groupId>
	<artifactId>Lessons</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>

	<modules>
		<module>Part01-Lesson01</module>
		<module>Part01-Lesson02</module>
		<module>Part01-Lesson03</module>
		<module>Part01-Lesson04</module>
		<module>Part01-Lesson05</module>
		<module>Part01-Lesson06</module>
		
		<module>Part02-Lesson01</module>
		<module>Part02-Lesson03</module>
		<module>Part02-Lesson04</module>
		<module>Part02-Lesson05</module>
		<module>Part02-Lesson06</module>
		<module>Part02-Lesson07</module>

		<module>Part03-Lesson01</module>
		<module>Part03-Lesson02</module>
		<module>Part03-Lesson03</module>
		<module>Part03-Lesson04</module>
		<module>Part03-Lesson05</module>

		<module>Part04-Lesson01</module>
		<module>Part04-Lesson02</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>12</maven.compiler.source>
		<maven.compiler.target>12</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<compilerVersion>1.8</compilerVersion>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<configuration>
							<configLocation>checkstyle.xml</configLocation>
							<encoding>UTF-8</encoding>
							<consoleOutput>true</consoleOutput>
							<failsOnError>true</failsOnError>
							<includeTestSourceDirectory>true</includeTestSourceDirectory>
							</configuration>
							<goals>
								<goal>check</goal>
							</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<check>
						<branchRate>60</branchRate>
						<lineRate>60</lineRate>
						<haltOnFailure>false</haltOnFailure>
						<totalBranchRate>60</totalBranchRate>
						<totalLineRate>60</totalLineRate>
						<packageLineRate>60</packageLineRate>
						<packageBranchRate>69</packageBranchRate>
					</check>
					<formats>
						<format>html</format>
					</formats>
				</configuration>
				<executions>
					<execution>
						<id>verify</id>
						<phase>verify</phase>
						<goals>
							<goal>clean</goal>
							<goal>check</goal>
							<goal>cobertura</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.2</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>